# database-chat-assistant

./: README.md  docker-compose.yml  env_example.txt  pyproject.toml
app/: chat_bot.py  main.py
app/evaluators/: dataset.ipynb
app/langchainService/: database_retriver.py  langchain_util.py  prompts.py  sql_agent_graph.py
app/langchainService/summary_chain/: chains.py  models.py  summarization.py  summary_prompt.py  summary_utils.py
app/langchainService/test_nodebooks/: ex_prompts.py  langchain_rnd.ipynb  langchain_rnd.py  runnable_modules.py
app/llamaIndex/: llamaIndexAgent.py  llamaIndexAgentDoc.py  llamaIndex_utils.py
app/llamaIndex/rnd/: llamaIndex_rnd.ipynb  llamaindex_sql_rnd.ipynb  test.py
app/utils/: chat_bot_utils.py  connections.py  db_info.py  models.py  settings.py
